--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap"
+        rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
@@ -11,7 +15,7 @@
 
 <body>
     <section class="testimonials-grid">
-        <div class="testimonial">
+        <div class="testimonial grid-col-span-2">
             <img src="images/image-daniel.jpg" alt="">
             <h3>Daniel Clifford</h3>
             <p>Verified Graduate</p>
@@ -39,7 +43,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita veritatis animi non voluptatem
                 quibusdam ex!</p>
         </div>
-        <div class="testimonial">
+        <div class="testimonial grid-col-span-2">
             <img src="images/image-patrick.jpg" alt="">
             <h3>Patrick Abrams</h3>
             <p>Verified Graduate</p>
@@ -49,7 +53,7 @@
                 necessitatibus labore molestias modi eligendi, minima, ea cupiditate cumque blanditiis velit culpa
                 laborum ipsa dolor omnis quas eaque nisi ullam. A deserunt iure sequi at consequatur.</p>
         </div>
-        <div class="testimonial">
+        <div class="testimonial highlight">
             <img src="images/image-kira.jpg" alt="">
             <h3>Kira Whittle</h3>
             <p>Verified Graduate</p>
