--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <section class="testimonials-grid">
-        <div class="testimonial grid-col-span-2">
+        <div class="testimonial grid-col-span-2 bg-primary-400 quote text-neutral-100">
             <img src="images/image-daniel.jpg" alt="">
             <h3>Daniel Clifford</h3>
             <p>Verified Graduate</p>
@@ -27,7 +27,7 @@
                 grueling - time of my life. Since completing the course, i've successfully switched careers, working as
                 a Software Engineer at a VR startup."</p>
         </div>
-        <div class="testimonial">
+        <div class="testimonial bg-secondary-400">
             <img src="images/image-jonathan.jpg" alt="">
             <h3>Jonathan Walters</h3>
             <p>Verified Graduate</p>
@@ -35,7 +35,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ad nemo aut consequatur magnam doloribus
                 nihil dolore a.</p>
         </div>
-        <div class="testimonial">
+        <div class="testimonial ">
             <img src="images/image-jeanette.jpg" alt="">
             <h3>Jeanette Harmoon</h3>
             <p>Verified Graduate</p>
@@ -43,7 +43,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita veritatis animi non voluptatem
                 quibusdam ex!</p>
         </div>
-        <div class="testimonial grid-col-span-2">
+        <div class="testimonial grid-col-span-2 bg-secondary-500">
             <img src="images/image-patrick.jpg" alt="">
             <h3>Patrick Abrams</h3>
             <p>Verified Graduate</p>
