--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
 
 <body>
     <section class="testimonials-grid">
+        <!-- Daniel -->
         <div class="testimonial grid-col-span-2 bg-primary-400 quote text-neutral-100">
-            <img src="images/image-daniel.jpg" alt="">
-            <h3>Daniel Clifford</h3>
-            <p>Verified Graduate</p>
+            <div class="profile">
+                <img src="images/image-daniel.jpg" alt="Daniel Clifford">
+                <div>
+                    <h3>Daniel Clifford</h3>
+                    <p>Verified Graduate</p>
+                </div>
+            </div>
             <p>I received a job offer midcourse, and the subjects i learned were current, if not more so, in the company
                 i joined. I honestly feel i got my every penny's worth.</p>
             <p>"I was an EMT for many years before i joined the bootcamp. I've been looking to make a transition and
@@ -27,44 +32,70 @@
                 grueling - time of my life. Since completing the course, i've successfully switched careers, working as
                 a Software Engineer at a VR startup."</p>
         </div>
-        <div class="testimonial bg-secondary-400">
-            <img src="images/image-jonathan.jpg" alt="">
-            <h3>Jonathan Walters</h3>
-            <p>Verified Graduate</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+
+        <!-- Jonathan -->
+        <div class="testimonial bg-secondary-400 text-neutral-100">
+            <div class="profile">
+                <img src="images/image-jonathan.jpg" alt="Jonathan Walters">
+                <div>
+                    <h3>Jonathan Walters</h3>
+                    <p>Verified Graduate</p>
+                </div>
+            </div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ad nemo aut consequatur magnam doloribus
                 nihil dolore a.</p>
         </div>
-        <div class="testimonial ">
-            <img src="images/image-jeanette.jpg" alt="">
-            <h3>Jeanette Harmoon</h3>
-            <p>Verified Graduate</p>
+
+        <!-- Jeanette -->
+        <div class="testimonial bg-neutral-100">
+            <div class="profile">
+                <img src="images/image-jeanette.jpg" alt="Jeanette Harmon">
+                <div>
+                    <h3>Jeanette Harmon</h3>
+                    <p>Verified Graduate</p>
+                </div>
+            </div>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita veritatis animi non voluptatem
                 quibusdam ex!</p>
         </div>
-        <div class="testimonial grid-col-span-2 bg-secondary-500">
-            <img src="images/image-patrick.jpg" alt="">
-            <h3>Patrick Abrams</h3>
-            <p>Verified Graduate</p>
+
+        <!-- Patrick -->
+        <div class="testimonial grid-col-span-2 bg-secondary-500 text-neutral-100">
+            <div class="profile">
+                <img src="images/image-patrick.jpg" alt="Patrick Abrams">
+                <div>
+                    <h3>Patrick Abrams</h3>
+                    <p>Verified Graduate</p>
+                </div>
+            </div>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, adipisci dolorem aspernatur iste
                 atque voluptates cum vel voluptatibus itaque alias!</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam, tempore temporibus neque ab
                 necessitatibus labore molestias modi eligendi, minima, ea cupiditate cumque blanditiis velit culpa
                 laborum ipsa dolor omnis quas eaque nisi ullam. A deserunt iure sequi at consequatur.</p>
         </div>
-        <div class="testimonial highlight">
-            <img src="images/image-kira.jpg" alt="">
-            <h3>Kira Whittle</h3>
-            <p>Verified Graduate</p>
+
+        <!-- Kira -->
+        <div class="testimonial bg-neutral-100">
+            <div class="profile">
+                <img src="images/image-kira.jpg" alt="Kira Whittle">
+                <div>
+                    <h3>Kira Whittle</h3>
+                    <p>Verified Graduate</p>
+                </div>
+            </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi non laudantium autem. Ea numquam
                 magnam quae non, doloribus incidunt cum, corporis vero obcaecati ipsam sit vel totam ratione amet
                 laborum quis. Odit nemo commodi eligendi soluta unde harum, error repellendus ut ex, accusantium
-                sapiente, non est consequuntur similique modi totam!</p>
+                sapiente, non est consequuntur similique modi totam! Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Tenetur consequatur minima impedit voluptate magnam nam quidem similique ut dignissimos tempora?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga provident dignissimos libero praesentium
+                nisi. Tenetur eaque eos commodi error sit.</p>
         </div>
     </section>
-
 </body>
 
 </html>
