--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <section class="testimonials-grid">
         <!-- Daniel -->
-        <div class="testimonial grid-col-span-2 bg-primary-400 quote text-neutral-100">
+        <div id="img-quotation" class="testimonial grid-col-span-2 bg-primary-400 quote text-neutral-100">
             <div class="profile">
                 <img src="images/image-daniel.jpg" alt="Daniel Clifford">
                 <div>
